--- a/public/chat.html
+++ b/public/chat.html
@@ -9,50 +9,28 @@
     <title>Chat App With Webcam</title>
 </head>
 <body> 
+    <h1>My ID: <span class="myID"></span></h1>
+    <div id="display">
+
+    </div>
+    <br>    
+    <div id="container">
+        <div class="video-displays">
+            <video  class="local" autoplay></video>
+            <video class="remote" autoplay></video>
+        </div>
+        <div class="buttons">
+            <input type="text" name="remoteUserId" id="remoteUserId" required>
+            <button type="button" id="callBtn">Call</button>
+            <button type="button" id="hangUpBtn">Hang Up</button>
+        </div>
+        
+    </div>
+
+
     
-    <div id="chat-area">
-        <div id="chat-sidebar">
 
-        </div>
-        <div id="chat-main">
-            <div id="messages"></div>
-
-            <div id="chat">
-                <form enctype="multipart/form-data" id="chat-form">
-                    <input type="text" name="message-box" id="message-box" placeholder="Enter message" 
-                        required autocomplete="off">
-                    <button type="submit" id="messageSubmitBtn">Send</button>
-                </form>
-                <button type="submit" id="geoLocationBtn">Send Location</button>
-            </div>
-        </div>
-
-    </div>   
-
-
-    <script id="message-template" type="text/html">
-        <div class="message">
-            <p><span class="user">{{username}}</span><span class="message-timestamp">{{createdAt}}</span></p>
-            <p class="message-text">{{message}}</p>    
-        </div>
-    </script>
-
-    <script id="url-template" type="text/html">
-        <div class="message">
-            <p><span class="user">{{username}}</span><span class="message-timestamp">{{createdAt}}</span></p>
-            <p class="message-text"><a href="{{url}}" target="_blank">My current location</a></p>
-        </div>
-    </script>
-
-    <script id="sidebar-template" type="text/html">
-        <h2 class="room-title">{{room}}</h2>
-        <h3 class="list-title">Users</h3>
-        <ul class="users">
-            {{#users}}
-                <li>{{username}}</li>
-            {{/users}}
-        </ul>
-    </script>
+   
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
