--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,8 @@
             <h1>Join</h1>
             <form class="join-form" action="/chat.html">
                 <label>Display Name</label>
-                <input type="text" name="username" placeholder="Display name" required>
-                <label>Room</label>
-                <input type="text" name="room" placeholder="Room" required>
-                <button type="submit">Join</button>
+                <input type="text" name="username" placeholder="Display name" required>               
+                <button type="submit">Join the chat room</button>
             </form>
         </div>
     </div>
